--- a/bolum-1/Temel Uygulama/index1.html
+++ b/bolum-1/Temel Uygulama/index1.html
@@ -13,11 +13,11 @@
     <h1>Web Geliştirme Yol Haritası</h1>
     
         <ul>
-            <li style="text-decoration: line-through;"><input type="checkbox" checked enabled >Html öğren</li>
-            <li style="text-decoration: line-through;"><input type="checkbox" checked enabled>Css öğren</li>
-            <li style="text-decoration: line-through;"><input type="checkbox" checked enabled>Javascript öğren</li>
-            <li style="background-color: #344cb7"><input type="checkbox">Backend dili öğren</li>
-            <li style="background-color: #344cb7"><input type="checkbox">Angular/React öğren</li>
+            <li><input type="checkbox" checked enabled >Html öğren</li>
+            <li><input type="checkbox" checked enabled>Css öğren</li>
+            <li><input type="checkbox" checked enabled>Javascript öğren</li>
+            <li style="text-decoration: none; background-color: #344cb7;"><input type="checkbox">Backend dili öğren</li>
+            <li style="text-decoration: none; background-color: #344cb7;" style="background-color: #344cb7"><input type="checkbox">Angular/React öğren</li>
         </ul>    
 
         
