--- a/bolum-7/css-transforms.html
+++ b/bolum-7/css-transforms.html
@@ -31,7 +31,7 @@
             /* transform: scale(3); */
             /* transform: translateX(100px); */
             /* transform: translate(100px, 100px); */
-            transform: rotateX(180deg);
+            /* transform: rotateX(180deg); */
         }
         
     </style>
